--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios": "^0.27.2",
     "cacache": "^16.1.3",
     "react": "^18.2.0",
-    "react-alice-carousel": "^2.6.4",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-multi-carousel": "^2.8.2",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
